--- a/.github/workflows/capacity-expansion.yml
+++ b/.github/workflows/capacity-expansion.yml
@@ -1,9 +1,12 @@
 name: "Capacity-Expansion-Test"
 on:
-  pull_request:
-    types: [push]
-    branches:
-      - main
+  on:
+    push:
+      branches:
+        - main
+    pull_request:
+      branches:
+        - main
 env:
   VERSION: 0.6.0-SNAPSHOT
 concurrency:
