--- a/.github/workflows/capacity-expansion.yml
+++ b/.github/workflows/capacity-expansion.yml
@@ -55,6 +55,7 @@ jobs:
         if: always()
         run: |
           if [ "${{matrix.DB-name}}" == "iotdb12" ]; then
+            "pwd"
             chmod +x "${GITHUB_WORKSPACE}/.github/testUnion.sh"
             mvn test -q -Dtest=TestUnionControler -DfailIfNoTests=false
           else
