--- a/.github/workflows/ds-influxdb.yml
+++ b/.github/workflows/ds-influxdb.yml
@@ -1,10 +1,12 @@
 name: "ITTest-ds-InfluxDB"
 
 on:
-  pull_request:
-    types: [opened, reopened]
+  push:
     branches:
-      - main
+      - "*"
+  pull_request:
+    branches:
+      - "*"
 env:
   VERSION: 0.6.0-SNAPSHOT
 
