--- a/.github/workflows/capacity-expansion.yml
+++ b/.github/workflows/capacity-expansion.yml
@@ -73,115 +73,132 @@ jobs:
           chmod +x "${GITHUB_WORKSPACE}/.github/testUnion.sh"
           mvn test -q -Dtest=TestUnionControler -DfailIfNoTests=false
 
-#  IoTDB-CE:
-#    timeout-minutes: 20
-#    strategy:
-#      fail-fast: false
-#      matrix:
-#        java: [ 8 ]
-#        python-version: [ "3.7" ]
-#        os: [ ubuntu-latest, macos-latest ]
-#        DB-name: [ "iotdb12" ]
-#    runs-on: ${{ matrix.os }}
-#    steps:
-#      - uses: actions/checkout@v2
-#      - name: Environmet Dependence
-#        uses: ./.github/actions/dependence
-#        with:
-#          python-version: ${{ matrix.python-version }}
-#          java: ${{ matrix.java }}
-#      - name: Run ZooKeeper
-#        uses: ./.github/actions/zookeeperRunner
-#      - name: Run IoTDB
-#        uses: ./.github/actions/iotdbRunner
-#        with:
-#          version: ${{matrix.DB-name}}
-#
-#      - name: Change pom
-#        run: |
-#          mv test/pom.xml test/pom.xml.backup
-#          mv test/pom.xml.${{matrix.DB-name}} test/pom.xml
-#      - name: Install IginX with Maven
-#        shell: bash
-#        run: |
-#          mvn clean package -DskipTests
-#
-#      #第 1 阶段测试开始==========================================
-#      - name: Prepare CapExp environment
-#        if: always()
-#        uses: ./.github/actions/capacityExpansionUnionTest
-#        with:
-#          version: ${VERSION}
-#          DB-name: ${{matrix.DB-name}}
-#          Test-Way: oriHasDataExpHasData
-#
-#      - name: oriHasDataExpHasData IT
-#        if: always()
-#        run: |
-#          if [ "${{matrix.DB-name}}" == "iotdb12" ]; then
-#            mvn test -q -Dtest=IoTDB12HistoryDataCapacityExpansionIT#oriHasDataExpHasData -DfailIfNoTests=false
-#          else
-#            echo "${{matrix.DB-name}} is not supported"
-#          fi
-#
-#      #第 2 阶段测试开始==========================================
-#      - name: Prepare CapExp environment
-#        if: always()
-#        uses: ./.github/actions/capacityExpansionUnionTest
-#        with:
-#          version: ${VERSION}
-#          DB-name: ${{matrix.DB-name}}
-#          Test-Way: oriNoDataExpNoData
-#
-#      - name: oriNoDataExpNoData IT
-#        if: always()
-#        run: |
-#          if [ "${{matrix.DB-name}}" == "iotdb12" ]; then
-#            mvn test -q -Dtest=IoTDB12HistoryDataCapacityExpansionIT#oriNoDataExpNoData -DfailIfNoTests=false
-#          else
-#            echo "${{matrix.DB-name}} is not supported"
-#          fi
-#
-#      #第 3 阶段测试开始==========================================
-#      - name: Prepare CapExp environment
-#        if: always()
-#        uses: ./.github/actions/capacityExpansionUnionTest
-#        with:
-#          version: ${VERSION}
-#          DB-name: ${{matrix.DB-name}}
-#          Test-Way: oriHasDataExpNoData
-#
-#      - name: oriHasDataExpNoData IT
-#        if: always()
-#        run: |
-#          if [ "${{matrix.DB-name}}" == "iotdb12" ]; then
-#            mvn test -q -Dtest=IoTDB12HistoryDataCapacityExpansionIT#oriHasDataExpNoData -DfailIfNoTests=false
-#          else
-#            echo "${{matrix.DB-name}} is not supported"
-#          fi
-#
-#      #第 4 阶段测试开始==========================================
-#      - name: Prepare CapExp environment
-#        if: always()
-#        uses: ./.github/actions/capacityExpansionUnionTest
-#        with:
-#          version: ${VERSION}
-#          DB-name: ${{matrix.DB-name}}
-#          Test-Way: oriNoDataExpHasData
-#
-#      - name: oriNoDataExpHasData IT
-#        if: always()
-#        run: |
-#          if [ "${{matrix.DB-name}}" == "iotdb12" ]; then
-#            mvn test -q -Dtest=IoTDB12HistoryDataCapacityExpansionIT#oriNoDataExpHasData -DfailIfNoTests=false
-#          else
-#            echo "${{matrix.DB-name}} is not supported"
-#          fi
-#
-#      - uses: codecov/codecov-action@v1
-#        with:
-#          file: ./**/target/site/jacoco/jacoco.xml
-#          name: codecov
+  IoTDB-CE:
+    timeout-minutes: 20
+    strategy:
+      fail-fast: false
+      matrix:
+        java: [ 8 ]
+        python-version: [ "3.7" ]
+        os: [ ubuntu-latest, macos-latest ]
+        DB-name: [ "iotdb12" ]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v2
+      - name: Environmet Dependence
+        uses: ./.github/actions/dependence
+        with:
+          python-version: ${{ matrix.python-version }}
+          java: ${{ matrix.java }}
+      - name: Run ZooKeeper
+        uses: ./.github/actions/zookeeperRunner
+      - name: Run IoTDB
+        uses: ./.github/actions/iotdbRunner
+        with:
+          version: ${{matrix.DB-name}}
+
+      - name: Change pom
+        run: |
+          mv test/pom.xml test/pom.xml.backup
+          mv test/pom.xml.${{matrix.DB-name}} test/pom.xml
+      - name: Install IginX with Maven
+        shell: bash
+        run: |
+          mvn clean package -DskipTests
+
+      #第 1 阶段测试开始==========================================
+      - name: Prepare CapExp environment
+        if: always()
+        uses: ./.github/actions/capacityExpansionUnionTest
+        with:
+          version: ${VERSION}
+          DB-name: ${{matrix.DB-name}}
+          Test-Way: oriHasDataExpHasData
+
+      - name: oriHasDataExpHasData IT
+        if: always()
+        run: |
+          if [ "${{matrix.DB-name}}" == "iotdb12" ]; then
+            mvn test -q -Dtest=IoTDB12HistoryDataCapacityExpansionIT#oriHasDataExpHasData -DfailIfNoTests=false
+            mvn test -q -Dtest=IoTDBSqlScaleOutIT#oriHasDataExpHasDataIT -DfailIfNoTests=false
+            mvn test -q -Dtest=IoTDBSessionScaleOutIT#oriHasDataExpHasDataIT -DfailIfNoTests=false
+            mvn test -q -Dtest=IoTDBRestfulScaleOutIT#oriHasDataExpHasDataIT -DfailIfNoTests=false
+            mvn test -q -Dtest=IoTDBTagScaleOutIT#oriHasDataExpHasDataIT -DfailIfNoTests=false
+            
+          else
+            echo "${{matrix.DB-name}} is not supported"
+          fi
+
+      #第 2 阶段测试开始==========================================
+      - name: Prepare CapExp environment
+        if: always()
+        uses: ./.github/actions/capacityExpansionUnionTest
+        with:
+          version: ${VERSION}
+          DB-name: ${{matrix.DB-name}}
+          Test-Way: oriNoDataExpNoData
+
+      - name: oriNoDataExpNoData IT
+        if: always()
+        run: |
+          if [ "${{matrix.DB-name}}" == "iotdb12" ]; then
+            mvn test -q -Dtest=IoTDB12HistoryDataCapacityExpansionIT#oriNoDataExpNoData -DfailIfNoTests=false
+            mvn test -q -Dtest=IoTDBSqlScaleOutIT#oriNoDataExpNoDataIT -DfailIfNoTests=false
+            mvn test -q -Dtest=IoTDBSessionScaleOutIT#oriNoDataExpNoDataIT -DfailIfNoTests=false
+            mvn test -q -Dtest=IoTDBRestfulScaleOutIT#oriNoDataExpNoDataIT -DfailIfNoTests=false
+            mvn test -q -Dtest=IoTDBTagScaleOutIT#oriNoDataExpNoDataIT -DfailIfNoTests=false
+          else
+            echo "${{matrix.DB-name}} is not supported"
+          fi
+
+      #第 3 阶段测试开始==========================================
+      - name: Prepare CapExp environment
+        if: always()
+        uses: ./.github/actions/capacityExpansionUnionTest
+        with:
+          version: ${VERSION}
+          DB-name: ${{matrix.DB-name}}
+          Test-Way: oriHasDataExpNoData
+
+      - name: oriHasDataExpNoData IT
+        if: always()
+        run: |
+          if [ "${{matrix.DB-name}}" == "iotdb12" ]; then
+            mvn test -q -Dtest=IoTDB12HistoryDataCapacityExpansionIT#oriHasDataExpNoData -DfailIfNoTests=false
+            mvn test -q -Dtest=IoTDBSqlScaleOutIT#oriHasDataExpNoDataIT -DfailIfNoTests=false
+            mvn test -q -Dtest=IoTDBSessionScaleOutIT#oriHasDataExpNoDataIT -DfailIfNoTests=false
+            mvn test -q -Dtest=IoTDBRestfulScaleOutIT#oriHasDataExpNoDataIT -DfailIfNoTests=false
+            mvn test -q -Dtest=IoTDBTagScaleOutIT#oriHasDataExpNoDataIT -DfailIfNoTests=false
+          else
+            echo "${{matrix.DB-name}} is not supported"
+          fi
+
+      #第 4 阶段测试开始==========================================
+      - name: Prepare CapExp environment
+        if: always()
+        uses: ./.github/actions/capacityExpansionUnionTest
+        with:
+          version: ${VERSION}
+          DB-name: ${{matrix.DB-name}}
+          Test-Way: oriNoDataExpHasData
+
+      - name: oriNoDataExpHasData IT
+        if: always()
+        run: |
+          if [ "${{matrix.DB-name}}" == "iotdb12" ]; then
+            mvn test -q -Dtest=IoTDB12HistoryDataCapacityExpansionIT#oriNoDataExpHasData -DfailIfNoTests=false
+            mvn test -q -Dtest=IoTDBSqlScaleOutIT#oriNoDataExpHasDataIT -DfailIfNoTests=false
+            mvn test -q -Dtest=IoTDBSessionScaleOutIT#oriNoDataExpHasDataIT -DfailIfNoTests=false
+            mvn test -q -Dtest=IoTDBRestfulScaleOutIT#oriNoDataExpHasDataIT -DfailIfNoTests=false
+            mvn test -q -Dtest=IoTDBTagScaleOutIT#oriNoDataExpHasDataIT -DfailIfNoTests=false
+          else
+            echo "${{matrix.DB-name}} is not supported"
+          fi
+
+      - uses: codecov/codecov-action@v1
+        with:
+          file: ./**/target/site/jacoco/jacoco.xml
+          name: codecov
 #
 #  SchemaPrefix-IoTDB-CE:
 #    timeout-minutes: 20
