--- a/.github/workflows/capacity-expansion.yml
+++ b/.github/workflows/capacity-expansion.yml
@@ -48,68 +48,25 @@ jobs:
         with:
           version: ${VERSION}
 
-#      - name: Run InfluxDB
-#        run: |
-#          if [ "$RUNNER_OS" == "Linux" ]; then
-#            chmod +x "${GITHUB_WORKSPACE}/.github/influxdb.sh"
-#            "${GITHUB_WORKSPACE}/.github/influxdb.sh"
-#          elif [ "$RUNNER_OS" == "macOS" ]; then
-#            chmod +x "${GITHUB_WORKSPACE}/.github/influxdb_macos.sh"
-#            "${GITHUB_WORKSPACE}/.github/influxdb_macos.sh"
-#          else
-#            echo "$RUNNER_OS is not supported"
-#            exit 1
-#          fi
+      - name: Run InfluxDB
+        run: |
+          if [ "$RUNNER_OS" == "Linux" ]; then
+            chmod +x "${GITHUB_WORKSPACE}/.github/influxdb.sh"
+            "${GITHUB_WORKSPACE}/.github/influxdb.sh"
+          elif [ "$RUNNER_OS" == "macOS" ]; then
+            chmod +x "${GITHUB_WORKSPACE}/.github/influxdb_macos.sh"
+            "${GITHUB_WORKSPACE}/.github/influxdb_macos.sh"
+          else
+            echo "$RUNNER_OS is not supported"
+            exit 1
+          fi
+
       - name: TestUnionControler IT
         if: always()
         run: |
           "pwd"
           chmod +x "${GITHUB_WORKSPACE}/.github/testUnion.sh"
-          mvn test -q -Dtest=IoTDBSQLSessionIT -DfailIfNoTests=false
-          mvn test -q -Dtest=IoTDBSQLSessionPoolIT -DfailIfNoTests=false
-          mvn test -q -Dtest=TagIT -DfailIfNoTests=false
-          "${GITHUB_WORKSPACE}/.github/testUnion.sh"
-
-  IoTDB-SQL-ds:
-    strategy:
-      fail-fast: false
-      matrix:
-        java: [ 8 ]
-        python-version: [ "3.7" ]
-        os: [ ubuntu-latest ]
-        iotdb-version: [ iotdb12 ]
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@v2
-      - name: Environmet Dependence
-        uses: ./.github/actions/dependence
-        with:
-          python-version: ${{ matrix.python-version }}
-          java: ${{ matrix.java }}
-
-      - name: Run ZooKeeper
-        uses: ./.github/actions/zookeeperRunner
-
-      - name: Run IoTDB
-        uses: ./.github/actions/iotdbRunner
-        with:
-          if-CapExp: "false"
-          version: ${{ matrix.iotdb-version }}
-
-      - name: Install with Maven
-        run: mvn clean package -DskipTests
-
-      - name: Start IginX
-        uses: ./.github/actions/iginxRunner
-        with:
-          version: ${VERSION}
-
-      - name: A Lame Integration Test with Maven for SQL
-        run: mvn test -q -Dtest=IoTDBSQLSessionIT -DfailIfNoTests=false
-      - uses: codecov/codecov-action@v1
-        with:
-          file: ./**/target/site/jacoco/jacoco.xml
-          name: codecov
+          mvn test -q -Dtest=TestUnionControler -DfailIfNoTests=false
 
 #  IoTDB-CE:
 #    timeout-minutes: 20
