--- a/.github/workflows/capacity-expansion.yml
+++ b/.github/workflows/capacity-expansion.yml
@@ -46,31 +46,31 @@ jobs:
         run: |
           mvn clean package -DskipTests
 
-      - name: Prepare CapExp environment
-        if: always()
-        uses: ./.github/actions/capacityExpansionUnionTest
-        with:
-          version: ${VERSION}
-          DB-name: ${{matrix.DB-name}}
-          Test-Way: oriNoDataExpNoData
+#      - name: Prepare CapExp environment
+#        if: always()
+#        uses: ./.github/actions/capacityExpansionUnionTest
+#        with:
+#          version: ${VERSION}
+#          DB-name: ${{matrix.DB-name}}
+#          Test-Way: oriNoDataExpNoData
 
-      - name: Run InfluxDB
-        run: |
-          if [ "$RUNNER_OS" == "Linux" ]; then
-            chmod +x "${GITHUB_WORKSPACE}/.github/influxdb.sh"
-            "${GITHUB_WORKSPACE}/.github/influxdb.sh"
-          elif [ "$RUNNER_OS" == "macOS" ]; then
-            chmod +x "${GITHUB_WORKSPACE}/.github/influxdb_macos.sh"
-            "${GITHUB_WORKSPACE}/.github/influxdb_macos.sh"
-          else
-            echo "$RUNNER_OS is not supported"
-            exit 1
-          fi
+#      - name: Run InfluxDB
+#        run: |
+#          if [ "$RUNNER_OS" == "Linux" ]; then
+#            chmod +x "${GITHUB_WORKSPACE}/.github/influxdb.sh"
+#            "${GITHUB_WORKSPACE}/.github/influxdb.sh"
+#          elif [ "$RUNNER_OS" == "macOS" ]; then
+#            chmod +x "${GITHUB_WORKSPACE}/.github/influxdb_macos.sh"
+#            "${GITHUB_WORKSPACE}/.github/influxdb_macos.sh"
+#          else
+#            echo "$RUNNER_OS is not supported"
+#            exit 1
+#          fi
 
       - name: TestUnionControler IT
         if: always()
+        shell: bash
         run: |
-          "pwd"
           chmod +x "${GITHUB_WORKSPACE}/.github/testUnion.sh"
           mvn test -q -Dtest=TestUnionControler -DfailIfNoTests=false
 
