--- a/.github/workflows/capacity-expansion.yml
+++ b/.github/workflows/capacity-expansion.yml
@@ -25,56 +25,53 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
-      - name: Environmet Dependence
-        uses: ./.github/actions/dependence
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
-          java: ${{ matrix.java }}
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+      - name: Set up JDK ${{ matrix.java }}
+        uses: actions/setup-java@v1
+        with:
+          java-version: ${{ matrix.java }}
+      - name: Cache Maven packages
+        uses: actions/cache@v2.1.5
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
       - name: Run ZooKeeper
-        uses: ./.github/actions/zookeeperRunner
-      - name: Run IoTDB
-        uses: ./.github/actions/iotdbRunner
-        with:
-          version: ${{matrix.DB-name}}
-
-      - name: Change pom
-        run: |
-          mv test/pom.xml test/pom.xml.backup
-          mv test/pom.xml.${{matrix.DB-name}} test/pom.xml
-      - name: Install IginX with Maven
-        shell: bash
-        run: |
-          mvn clean package -DskipTests
-          
-#      - name: Set The DB Name
-#        uses: ./.github/actions/confWriter
-#        with:
-#          confFile: DBName
-#          DB-name: ${{matrix.DB-name}}
-#
-#      - name: Start IginX
-#        uses: ./.github/actions/iginxRunner
-
-      - name: Prepare CapExp environment
-        if: always()
-        uses: ./.github/actions/capacityExpansionUnionTest
-        with:
-          version: ${VERSION}
-          DB-name: ${{matrix.DB-name}}
-          Test-Way: oriNoDataExpNoData
-
-      - name: Run InfluxDB
         run: |
           if [ "$RUNNER_OS" == "Linux" ]; then
-            chmod +x "${GITHUB_WORKSPACE}/.github/influxdb.sh"
-            "${GITHUB_WORKSPACE}/.github/influxdb.sh"
+            chmod +x "${GITHUB_WORKSPACE}/.github/zk.sh"
+            "${GITHUB_WORKSPACE}/.github/zk.sh"
           elif [ "$RUNNER_OS" == "macOS" ]; then
-            chmod +x "${GITHUB_WORKSPACE}/.github/influxdb_macos.sh"
-            "${GITHUB_WORKSPACE}/.github/influxdb_macos.sh"
+            chmod +x "${GITHUB_WORKSPACE}/.github/zk_macos.sh"
+            "${GITHUB_WORKSPACE}/.github/zk_macos.sh"
           else
             echo "$RUNNER_OS is not supported"
             exit 1
           fi
+      - name: Set Parquet
+        run: |
+          if [ "$RUNNER_OS" == "Linux" ]; then
+            chmod +x "${GITHUB_WORKSPACE}/.github/parquet.sh"
+            "${GITHUB_WORKSPACE}/.github/parquet.sh"
+          elif [ "$RUNNER_OS" == "macOS" ]; then
+            chmod +x "${GITHUB_WORKSPACE}/.github/parquet_macos.sh"
+            "${GITHUB_WORKSPACE}/.github/parquet_macos.sh"
+          else
+            echo "$RUNNER_OS is not supported"
+            exit 1
+          fi
+      - name: Install with Maven
+        run: mvn clean package -DskipTests
+      - name: Start IginX
+        run: |
+          chmod +x "${GITHUB_WORKSPACE}/core/target/iginx-core-${VERSION}/sbin/start_iginx.sh"
+          nohup "${GITHUB_WORKSPACE}/core/target/iginx-core-${VERSION}/sbin/start_iginx.sh" &
 
       - name: TestUnionControler IT
         if: always()
